# rc-op-project

./: .flashvc_workflow.js  .gitignore  README.md  WRITEUP.md  benchmark.py  config.py  download_models.py  download_vctk.sh  evaluate.py  infer.py  inference.py  main.py  playground.ipynb  playground.py  pyproject.toml  requirements.txt  run_sweeps.sh  serve.py  setup.sh  setup_all.sh  setup_env.sh  test_setup.py  train.py  utils.py
backbone/: __init__.py  knnvc.py
data/: VCTK-Corpus-0.92.zip.aria2  __init__.py  dataset.py  preprocess.py  vctk.py
distill/: __init__.py  cached_gen.py  dataset_gen.py  exp_eval.py  exp_train.py  precompute.py  train.py
models/: __init__.py  converter.py  decoder.py  flow_matching.py  flow_network.py  grad_reverse.py  projection.py  proto_converter.py  rcop.py  speaker.py  system.py
models/ecapa_voxceleb/: hyperparams.yaml
scripts/: download_data.sh  smoke_test.sh
utils/: __init__.py  checkpoint.py  environment.py  features.py  logging.py  loss.py  phonemes.py  svd_projection.py  upsample.py  vocoder.py
