[project]
name = "voice-conversion-flow"
version = "0.1.0"
description = "Voice Conversion using Rectified Flow Matching"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    
    # Models
    "transformers>=4.30.0",
    "speechbrain>=1.0.0",
    "accelerate>=0.20.0",
    # Pin huggingface_hub to avoid use_auth_token deprecation issue with speechbrain
    "huggingface_hub>=0.20.0,<0.24.0",
    
    # Audio processing
    "soundfile>=0.12.0",
    "resampy>=0.4.0",
    "librosa>=0.10.0",
    
    # Phonemes
    "phonemizer>=3.2.0",
    
    # Training utilities
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "utils", "models"]
