[project]
name = "neural-knn-vc"
version = "0.1.0"
description = "NeuralKNN-VC: a kNN-VC quality backbone plus a novel pool-free neural converter distilled from it."
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "torch>=2.10",
    "torchaudio>=2.10",
    "numpy>=1.24.0",

    # Speaker embeddings (ECAPA-TDNN via SpeechBrain)
    "speechbrain>=1.0.0",
    # Pin huggingface_hub low enough to avoid use_auth_token deprecation in speechbrain
    "huggingface_hub>=0.20.0,<0.24.0",

    # Training utilities
    "accelerate>=0.20.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",

    # Audio I/O / processing
    "soundfile>=0.12.0",
    "librosa>=0.10.0",

    # Notebook / visualization
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
]

# WavLM-Large + (prematched) HiFi-GAN are loaded at runtime from the
# bshall/knn-vc torch.hub repo (trust_repo=True) -- no extra hard dependency.
# transformers / vocos from the OLD from-scratch-mel system are NOT used and
# are intentionally dropped.

[project.optional-dependencies]
# Optional WER evaluation in benchmark.py (guarded by try/except).
eval = ["faster-whisper>=1.0.0"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "models", "backbone", "distill"]
